--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ override.tf.json
 .terraformrc
 terraform.rc
 
+#hcl
+.terraform.lock.hcl
+
 #variables 
 # terraform.tfvars
 # .terraform/.gitignore
